--- a/style.css
+++ b/style.css
@@ -33,11 +33,13 @@ li > .links {
 /* ----- Site Structure ----- */
 
 header {
-
+     background-color: #333;
+     width: 100%;
+     height: 50px;
 }
 
 nav {
-     
+
 }
 
 main {
