--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ section {
 }
 
 footer {
-
-}
-
+     position: fixed;
+     bottom: 0;
+     left: 0;
+     background-color: #333;
+     width: 100%;
+     height: 100px;
+     }
