--- a/style.css
+++ b/style.css
@@ -17,12 +17,21 @@ body {
      font-weight: 500;
 }
 
+nav li,
+footer li { /* Displays items side by side */
+     display: inline;
+     text-align: center;
+}
+
+
 li > .links {
      /* Hyperlinks */
      list-style-type: none;
      text-decoration: none;
      color: honeydew;
      text-transform: uppercase;
+     font-weight: 600;
+     padding: 14px 16px;
 }
 
 #cta { /* Contact CTA Link */
@@ -39,7 +48,12 @@ header {
 }
 
 nav {
-
+     position: fixed;
+     width: 100%;
+     top: 0;
+     margin: 0;
+     padding: 0px 0px 14px 0px;
+     z-index: 1;
 }
 
 main {
