--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
      /* Colors */
-     background-color: black;
+     background-color:firebrick;
      color: chartreuse;
 
      /* Fonts */
@@ -37,7 +37,7 @@ li a:hover,
 li a:focus,
 #cta,
 .active {
-     background-color: cyan;
+     background-color:dodgerblue;
      color: #333;
      border-radius: 10px 0px;
      transition: ease-in-out 0.3s;
@@ -48,7 +48,6 @@ li a:focus,
 header {
      background-color: #333;
      width: 100%;
-     height: auto;
 }
 
 nav, footer { /* fixed placement */
@@ -57,6 +56,7 @@ nav, footer { /* fixed placement */
      overflow: hidden;
      text-align: center;
      width: 100%;
+     height: auto;
      margin: auto;
      padding: 12px 14px;
      z-index: 1;
@@ -66,17 +66,18 @@ nav { /* fixed to top */
      top: 0;
 }
 
-
-
 footer {
      /* fixed to bottom */
      bottom: 0;
 }
 
-main {
+/* ----- Content Sections ----- */
+
+.profile {
      width: 100%;
+     display: flex;
 }
 
-section {
-     width: 100%;
+.profile > div {
+     background-color: black;
 }
