--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
      padding: 0;
 }
 
+html { /* Smooth Scrolling */
+     scroll-behavior: smooth;
+}
+
 body {
      /* Colors */
-     background-color:firebrick;
-     color: chartreuse;
+     background-color:indigo;
+     color: white;
 
      /* Fonts */
      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -40,7 +44,17 @@ li a:focus,
      background-color:dodgerblue;
      color: #333;
      border-radius: 10px 0px;
+     box-shadow: 1px 1px 2px 0px dodgerblue;
      transition: ease-in-out 0.3s;
+}
+
+h1 {
+     text-align: center;
+}
+
+img {
+     margin: 0 auto;
+     padding: 0 auto;
 }
 
 /* ----- Site Structure ----- */
@@ -51,7 +65,6 @@ header {
 }
 
 nav, footer { /* fixed placement */
-     background-color: #333;
      position: fixed;
      overflow: hidden;
      text-align: center;
@@ -73,11 +86,52 @@ footer {
 
 /* ----- Content Sections ----- */
 
-.profile {
+main {
      width: 100%;
-     display: flex;
+     position: absolute;
+     top: 45;
+     margin: 0 auto;
+     padding: 0 auto;
+}
+
+.profile {
+     position: relative;
+     width: 30%;
+     height: 700px;
+     margin: 0 auto;
+     padding: 40px;
+     display: grid;
+     float: left;
 }
 
 .profile > div {
-     background-color: black;
+     background-color: #212121;
+     border-radius: 10px;
+     box-shadow: 2px 2px 4px 0px dodgerblue;
+     padding: 10px;
+}
+
+.profile-avatar {
+     margin: 25px;
+     width: 75%;
+     height: auto;
+     border: 1px solid dodgerblue;
+     box-shadow: 1px 1px 2px 0px dodgerblue;
+     border-radius: 50%;
+}
+
+.projects {
+     position: relative;
+     width: 65%;
+     height: 700px;
+     margin: 0 auto;
+     padding: 40px;
+     display: grid;
+}
+
+.projects > div {
+     background-color: #212121;
+     border-radius: 10px;
+     box-shadow: 2px 2px 4px 0px dodgerblue;
+     padding: 10px;
 }
