--- a/style.css
+++ b/style.css
@@ -12,14 +12,35 @@ html { /* Smooth Scrolling */
 
 body {
      /* Colors */
-     background-color:indigo;
+     background-color: #212121;
      color: white;
+
+      /* BG Image w/Overlay Gradient */
+      background-image: linear-gradient(rgba(1, 1, 1, 0.5), rgba(1, 1, 1, 0)),
+      url("https://images.unsplash.com/photo-1463171379579-3fdfb86d6285?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+
+      /* Position */
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      position: relative;
+      height: 100%;
 
      /* Fonts */
      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
      font-size: 16px;
      font-weight: 500;
 }
+
+/* Section BG */
+.profile,
+.projects > div {
+     background-image: linear-gradient(rgba(125,125,125,0.3), rgba(0,0,5,0.9));
+     border-radius: 10px;
+     box-shadow: 2px 2px 4px 0px dodgerblue;
+     padding: 10px;
+}
+
 
 nav li,
 footer li { /* Displays items side by side */
@@ -29,6 +50,15 @@ footer li { /* Displays items side by side */
      list-style-type: none; 
 }
 
+.cta {
+     display: block;
+     text-align:center;
+     text-transform: uppercase;
+     font-weight: 600;
+     list-style-type: none;
+     text-decoration: none;
+}
+
 li > .links {
      /* Hyperlinks */
      text-decoration: none;
@@ -36,10 +66,16 @@ li > .links {
      padding: 12px 14px;
 }
 
+li > .cta{ 
+     /* CTA button*/
+     color: honeydew;
+     padding: 12px 14px;
+}
+
 /* Hover & Active states */
 li a:hover,
 li a:focus,
-#cta,
+.cta,
 .active {
      background-color:dodgerblue;
      color: #333;
@@ -48,8 +84,32 @@ li a:focus,
      transition: ease-in-out 0.3s;
 }
 
-h1 {
+h1, h3 {
      text-align: center;
+     text-shadow: 1px 1px 2px black;
+     padding: 5px;
+}
+
+h3 {
+     font-size: 36px;
+}
+
+h4 {
+     font-size: 14px;
+}
+
+hr {
+     margin: 0 auto;
+     width: 75%;
+     color: dodgerblue;
+}
+
+p {
+     font-weight: 400;
+     font-size: 14px;
+     text-align: justify;
+     word-spacing: 2px;
+     padding: 25px;
 }
 
 img {
@@ -71,8 +131,8 @@ nav, footer { /* fixed placement */
      width: 100%;
      height: auto;
      margin: auto;
-     padding: 12px 14px;
-     z-index: 1;
+     padding: 24px 14px;
+     z-index: 2;
 }
 
 nav { /* fixed to top */
@@ -88,50 +148,53 @@ footer {
 
 main {
      width: 100%;
-     position: absolute;
-     top: 45;
+     position: relative;
+     top: 25;
      margin: 0 auto;
      padding: 0 auto;
 }
 
+.photo-credits {
+     margin-right: 25px;
+     text-align: center;
+     text-shadow: 1px 1px 2px black;
+}
+
+.blue { /* Photo Links */
+     color: dodgerblue;
+     text-decoration: none;
+     font-weight: bold;
+}
+
 .profile {
-     position: relative;
-     width: 30%;
-     height: 700px;
+     position: fixed;
+     overflow-x: hidden;
+     top: 65;
+     left: 15;
+     z-index: 1;
+     width: 400px;
+     height: 85%;
      margin: 0 auto;
-     padding: 40px;
-     display: grid;
-     float: left;
-}
-
-.profile > div {
-     background-color: #212121;
-     border-radius: 10px;
-     box-shadow: 2px 2px 4px 0px dodgerblue;
-     padding: 10px;
-}
-
-.profile-avatar {
-     margin: 25px;
-     width: 75%;
-     height: auto;
-     border: 1px solid dodgerblue;
-     box-shadow: 1px 1px 2px 0px dodgerblue;
-     border-radius: 50%;
+     padding: 20px;
 }
 
 .projects {
      position: relative;
-     width: 65%;
-     height: 700px;
-     margin: 0 auto;
-     padding: 40px;
-     display: grid;
+     top: 45;
+     width: 75%;
+     height: 85%;
+     margin-left: 400px;
+     padding: 85px 50px;
+     display: flex;
+     flex-flow: row wrap;
+     justify-content: center;
 }
 
-.projects > div {
-     background-color: #212121;
-     border-radius: 10px;
-     box-shadow: 2px 2px 4px 0px dodgerblue;
-     padding: 10px;
+.profile-avatar {
+     margin: 25px 100px;
+     width: 50%;
+     height: auto;
+     border: 1px solid dodgerblue;
+     box-shadow: 1px 1px 2px 0px dodgerblue;
+     border-radius: 50%;
 }
