Added Parallax Effect to control the background and have the sections scroll over it.

--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ body {
       background-image: linear-gradient(rgba(1, 1, 1, 0.5), rgba(1, 1, 1, 0)),
       url("https://images.unsplash.com/photo-1463171379579-3fdfb86d6285?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
 
-      /* Position */
+      /* Position  w/Parallax Effect */
       background-repeat: no-repeat;
-      background-position: center;
+      background-attachment: fixed;
+      background-position: center center;
       background-size: cover;
       position: relative;
       height: 100%;
