--- a/style.css
+++ b/style.css
@@ -6,6 +6,16 @@
      padding: 0;
 }
 
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+
+     .sidebar,
+     .projects {
+          width: 100%;
+          padding: 0;
+     }
+}
+
 html { /* Smooth Scrolling */
      scroll-behavior: smooth;
 }
@@ -39,34 +49,22 @@ body {
 .profile {
      background-color: rgba(1, 1, 1, 0.3);
      border-radius: 10px 0px;
-     max-width: 350px;
-     display: flex;
-     flex-flow: column wrap;
-     justify-content: center;
-     align-items: center;
      height: auto;
      padding: auto;
-     margin: 30px;
+     margin-top: 20px;
      text-align: center;
 }
 
 .projects {
-     display: flex;
-     flex-flow: row wrap;
-     justify-content: flex-end;
-     align-items: center;
-     
+    width: 70%;
 }
 
 .projects > div {
-     max-width: 600px;
      background-color: rgba(1, 1, 1, 0.3);
      border-radius: 10px 0px;
      box-shadow: 0 4px 8px 0 dodgerblue;
-     padding: 10px;
-     flex-basis: 50%;
      padding: 50px;
-     margin: 30px;
+     margin: 20px;
 }
 
 nav li,
@@ -178,22 +176,15 @@ footer {
 
 /* ----- Content Sections ----- */
 
-section {
-     position: relative;
-     width: 100%;
-     margin: auto;
-     padding: auto;
+.content {
      display: flex;
      flex-flow: row wrap;
      justify-content: center;
-     align-items: center;
 }
 
 .sidebar {
-     display: flex;
-     flex-flow: column wrap;
-     justify-content: center;
-     align-items: flex-start;
+     width: 30%;
+     padding-right: 10px;
 }
 
 .photo-credits {
@@ -211,7 +202,7 @@ section {
 .profile-avatar {
      margin: 0 auto;
      width: 100%;
-     height: 50%;
+     height: auto;
 }
 
 .title {
